Collecting less cruft

--- a/etc/telegraf/telegraf.d/telegraf-jolokia-cassandra.conf
+++ b/etc/telegraf/telegraf.d/telegraf-jolokia-cassandra.conf
@@ -8,35 +8,27 @@
 
 [[jolokia.metrics]]
   name = "heap_memory_usage"
-  jmx  = "/java.lang:type=Memory/HeapMemoryUsage"
+  jmx  = "/java.lang:type=Memory/HeapMemoryUsage/used"
 
 [[jolokia.metrics]]
   name = "nonheap_memory_usage"
-  jmx  = "/java.lang:type=Memory/NonHeapMemoryUsage"
+  jmx  = "/java.lang:type=Memory/NonHeapMemoryUsage/used"
 
 [[jolokia.metrics]]
-  name = "read_latency"
-  jmx  = "/org.apache.cassandra.metrics:type=ClientRequest,scope=Read,name=Latency"
+  name = "gc_cms_time"
+  jmx  = "/java.lang:type=GarbageCollector,name=ConcurrentMarkSweep/CollectionTime"
 
 [[jolokia.metrics]]
-  name = "write_latency"
-  jmx  = "/org.apache.cassandra.metrics:type=ClientRequest,scope=Write,name=Latency"
+  name = "gc_cms_count"
+  jmx  = "/java.lang:type=GarbageCollector,name=ConcurrentMarkSweep/CollectionCount"
 
 [[jolokia.metrics]]
-  name = "read_requests"
-  jmx  = "/org.apache.cassandra.metrics:type=ClientRequest,scope=Read,name=TotalLatency"
+  name = "gc_parnew_time"
+  jmx  = "/java.lang:type=GarbageCollector,name=ParNew/CollectionTime"
 
 [[jolokia.metrics]]
-  name = "write_requests"
-  jmx  = "/org.apache.cassandra.metrics:type=ClientRequest,scope=Write,name=TotalLatency"
-
-[[jolokia.metrics]]
-  name = "gc_cms"
-  jmx  = "/java.lang:type=GarbageCollector,name=ConcurrentMarkSweep"
-
-[[jolokia.metrics]]
-  name = "gc_parnew"
-  jmx  = "/java.lang:type=GarbageCollector,name=ParNew"
+  name = "gc_parnew_count"
+  jmx  = "/java.lang:type=GarbageCollector,name=ParNew/CollectionCount"
 
 [[jolokia.metrics]]
   name = "clients_thrift"
@@ -57,6 +49,24 @@
 [[jolokia.metrics]]
   name = "AntiEntropyStage"
   jmx  = "/org.apache.cassandra.metrics:type=ThreadPools,path=internal,scope=AntiEntropyStage,name=ActiveTasks"
+
+[[jolokia.metrics]]
+  name = "read_requests"
+  jmx  = "/org.apache.cassandra.metrics:type=ClientRequest,scope=Read,name=TotalLatency"
+
+[[jolokia.metrics]]
+  name = "write_requests"
+  jmx  = "/org.apache.cassandra.metrics:type=ClientRequest,scope=Write,name=TotalLatency"
+
+
+[[jolokia.metrics]]
+  name = "read_latency"
+  jmx  = "/org.apache.cassandra.metrics:type=ClientRequest,scope=Read,name=Latency"
+
+[[jolokia.metrics]]
+  name = "write_latency"
+  jmx  = "/org.apache.cassandra.metrics:type=ClientRequest,scope=Write,name=Latency"
+
 
 ### This config is for individual column-families, which currently produces much cruft:
 #
