Works with telegraph 0.10.2

--- a/etc/telegraf/telegraf.d/inputs-exec.conf
+++ b/etc/telegraf/telegraf.d/inputs-exec.conf
@@ -1,7 +1,35 @@
 [[inputs.exec]]
   name_override = "cassandra_tables_readlatency"
-  command = "/usr/local/bin/cruft1.sh"
+  command       = "/usr/local/bin/telegraf-cassandra-plugin.py --host=localhost --port=8778 --metric=ReadLatency"
+  data_format   = "influx"
+  interval      = "300s"
+
+[[inputs.exec]]
+  name_override = "cassandra_tables_coordinatorreadlatency"
+  command       = "/usr/local/bin/telegraf-cassandra-plugin.py --host=localhost --port=8778 --metric=CoordinatorReadLatency"
+  data_format   = "influx"
+  interval      = "300s"
 
 [[inputs.exec]]
   name_override = "cassandra_tables_writelatency"
-  command = "/usr/local/bin/cruft2.sh"
+  command       = "/usr/local/bin/telegraf-cassandra-plugin.py --host=localhost --port=8778 --metric=WriteLatency"
+  data_format   = "influx"
+  interval      = "300s"
+
+[[inputs.exec]]
+  name_override = "cassandra_tables_reads"
+  command       = "/usr/local/bin/telegraf-cassandra-plugin.py --host=localhost --port=8778 --metric=ReadTotalLatency"
+  data_format   = "influx"
+  interval      = "300s"
+
+[[inputs.exec]]
+  name_override = "cassandra_tables_writes"
+  command       = "/usr/local/bin/telegraf-cassandra-plugin.py --host=localhost --port=8778 --metric=WriteTotalLatency"
+  data_format   = "influx"
+  interval      = "300s"
+
+[[inputs.exec]]
+  name_override = "cassandra_tables_storage"
+  command       = "/usr/local/bin/telegraf-cassandra-plugin.py --host=localhost --port=8778 --metric=LiveDiskSpaceUsed"
+  data_format   = "influx"
+  interval      = "300s"
