Updated Telegraf config fragments

--- a/etc/telegraf/telegraf.d/telegraf-jolokia-cassandra.conf
+++ b/etc/telegraf/telegraf.d/telegraf-jolokia-cassandra.conf
@@ -1,5 +1,6 @@
 [jolokia]
-  context = "/jolokia/read"
+  context  = "/jolokia/read"
+  interval = "300s"
 
 [[jolokia.servers]]
   name = "cassandra"
@@ -51,45 +52,9 @@
   jmx  = "/org.apache.cassandra.metrics:type=ThreadPools,path=internal,scope=AntiEntropyStage,name=ActiveTasks"
 
 [[jolokia.metrics]]
-  name = "read_requests"
-  jmx  = "/org.apache.cassandra.metrics:type=ClientRequest,scope=Read,name=TotalLatency"
-
-[[jolokia.metrics]]
-  name = "write_requests"
-  jmx  = "/org.apache.cassandra.metrics:type=ClientRequest,scope=Write,name=TotalLatency"
-
-
-[[jolokia.metrics]]
   name = "read_latency"
   jmx  = "/org.apache.cassandra.metrics:type=ClientRequest,scope=Read,name=Latency"
 
 [[jolokia.metrics]]
   name = "write_latency"
   jmx  = "/org.apache.cassandra.metrics:type=ClientRequest,scope=Write,name=Latency"
-
-
-### This config is for individual column-families, which currently produces much cruft:
-#
-#[[jolokia.metrics]]
-#  name = "cf_read_latency"
-#  jmx  = "/org.apache.cassandra.metrics:type=ColumnFamily,keyspace=*,scope=*,name=ReadLatency"
-#
-#[[jolokia.metrics]]
-#  name = "cf_coordinator_read_latency"
-#  jmx  = "/org.apache.cassandra.metrics:type=ColumnFamily,keyspace=*,scope=*,name=CoordinatorReadLatency"
-#
-#[[jolokia.metrics]]
-#  name = "cf_write_latency"
-#  jmx  = "/org.apache.cassandra.metrics:type=ColumnFamily,keyspace=*,scope=*,name=WriteLatency"
-#
-#[[jolokia.metrics]]
-#  name = "cf_read_requests"
-#  jmx  = "/org.apache.cassandra.metrics:type=ColumnFamily,keyspace=*,scope=*,name=ReadTotalLatency"
-#
-#[[jolokia.metrics]]
-#  name = "cf_write_requests"
-#  jmx  = "/org.apache.cassandra.metrics:type=ColumnFamily,keyspace=*,scope=*,name=WriteTotalLatency"
-#
-#[[jolokia.metrics]]
-#  name = "cf_storage_used"
-#  jmx  = "/org.apache.cassandra.metrics:type=ColumnFamily,keyspace=*,scope=*,name=LiveDiskSpaceUsed"
